--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 **/**.zip
 **/.ipynb_checkpoints/
 Investigate_the_IMBD_movie_dataset/Reviews on project 2.pdf
+Analyze_AB_Test_for_an_e_commerce_website/analyzeabtestresults-2.zip
